design-assignment/styles.css
@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');

body {
    font-family: 'Work Sans', sans-serif;
    max-width: 100%;
}

#header {
    max-width: 100%;
    margin-right: 0;
    padding-bottom: 6px;
}

#header-row {
    max-width: 100%;
    margin-right: 0;
}

#logo img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

@media (max-width: 768px) {
    #cart-col {
        padding-left: 60px;
    }
}

#cart {
    margin-right: 5%;
    padding: 2.5rem 1.5rem 0.5rem 0;
    line-height: 1.2;
    text-align: right;
    color: #000000AA;
}

#cart-col {
    padding-right: 0;
    padding-left: 0;
}

svg {
    padding-left: 4px;
}

#search {
    /* margin-right: 5%; */
    padding: 10px 2rem 0 0;
}

#search-row {
    margin-left: 2%;
    padding-left: 10px;
}

#form {
    margin-right: 0;
}

.form-control {
    border-radius: 0;
}

.form-control:focus {
    border-color: #a3d0a2;
    box-shadow: 0 0 0 0.2rem #a3d0a277;
}

.btn-outline-success {
    color: #a2d0cf;
    border-color: #a3d0a2;
    border-radius: 0;
    padding: 0;
}

.btn-outline-success:hover {
    border-color: #a3d0a2;
    background-color: #a3d0a2;
}

.btn-outline-success:focus {
    box-shadow: 0 0 0 0.2rem #a3d0a277;
}

.btn-outline-success img {
    transform: translateY(-1px);
}

.navbar {
    background-color: rgba(162,208,207,.25);
}

#left-fill {
    width: 2%;
}

.navbar-brand {
    padding-left:40px;
}

.navbar form {
    padding-right:40px;
}

main {
    justify-content: center;
    text-align: center;
}

h1 {
    margin-top: .7rem;
    color: #000000CC;
}

h2 {
    font-family: 'Pacifico', cursive;
    color: #a2d0cf;
    padding: 0.5rem 0 2rem 0;
}

.price {
    color: #d0a2a3;
}

.buy {
    background-color: #d0a2a399;
}

.buy:hover {
    background-color: #d0a2a3;
}

.go {
    background-color: #a3d0a255;
}

.go:hover {
    background-color: #a3d0a2AA;
}

.row {
    padding-bottom: 2rem;
}

.col-6 {
    margin-bottom: 1rem;
}

.card {
    height: 100%;
}

.ct-container {
    margin: 0;
    padding: 0;
    height: 35%;
    width: 100%;
}


#container-social {
    margin: 1.5rem 0 1.8rem 0;
    padding-bottom: 1rem;
    display: flex;
}

#newsletter {
    width: 50%;
    text-align: left;
    margin-left: 0.3rem;
    margin-right: 0.5rem;
}

#newsletter-form {
    padding: 0.3rem 0 0 0.8rem;
    width: 95%;
}

#social {
    width: 50%;
    position: relative;
}

#social-row {
    margin: 2rem auto 1rem 1rem;
    padding-bottom: 0;
}

#social-row img {
    margin-bottom: 2rem;
}

footer {
    background-color: #a2d0cf40;
    width: 100%;
}

#footer-row {
    margin: 0;
}

footer div {
    padding-top: 1.9rem;
}

#footer-left, #footer-right {
    min-width: 250px;
}

footer li {
    list-style: none;
}

@media (min-width: 1000px), print {
    #footer-left {
        width: 50%;
        float: left;
    }
    #footer-right {
        height: 100%;
        width: 50%;
        float: right;
    }
}

